Extract ValidatorConfig from GlobalConfiguration (#2889)