@@ -16,10 +16,14 @@ package tech.pegasys.teku.validator.client.loader;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 
-import java.io.IOException;
+import com.google.common.io.Resources;
+import java.io.File;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import org.apache.tuweni.bytes.Bytes;
 import org.junit.jupiter.api.Test;
@@ -28,17 +32,29 @@ import tech.pegasys.teku.bls.BLSPublicKey;
 import tech.pegasys.teku.core.signatures.SlashingProtector;
 import tech.pegasys.teku.infrastructure.async.StubAsyncRunner;
 import tech.pegasys.teku.util.config.GlobalConfiguration;
+import tech.pegasys.teku.validator.api.ValidatorConfig;
 import tech.pegasys.teku.validator.client.Validator;
 
 class ValidatorLoaderTest {
 
-  private static final String PUBLIC_KEY1 =
-      "0xa99a76ed7796f7be22d5b7e85deeb7c5677e88e511e0b337618f8c4eb61349b4bf2d153f649f7b53359fe8b94a38e44c";
-  private static final String PUBLIC_KEY2 =
-      "0xb89bebc699769726a318c8e9971bd3171297c61aea4a6578a7a4f94b547dcba5bac16a89108b6b6a1fe3695d1a874a0b";
-  private static final String VALIDATOR_KEY_FILE =
-      "- {privkey: '0x25295f0d1d592a90b333e26e85149708208e9f8e8bc18f6c77bd62f8ad7a6866',\n"
-          + "  pubkey: '0xa99a76ed7796f7be22d5b7e85deeb7c5677e88e511e0b337618f8c4eb61349b4bf2d153f649f7b53359fe8b94a38e44c'}";
+  private static final BLSPublicKey PUBLIC_KEY1 =
+      BLSPublicKey.fromSSZBytes(
+          Bytes.fromHexString(
+              "0x9612d7a727c9d0a22e185a1c768478dfe919cada9266988cb32359c11f2b7b27f4ae4040902382ae2910c15e2b420d07"));
+  private static final BLSPublicKey PUBLIC_KEY2 =
+      BLSPublicKey.fromSSZBytes(
+          Bytes.fromHexString(
+              "0xb89bebc699769726a318c8e9971bd3171297c61aea4a6578a7a4f94b547dcba5bac16a89108b6b6a1fe3695d1a874a0b"));
+
+  private static final URL SIGNER_URL;
+
+  static {
+    try {
+      SIGNER_URL = new URL("http://localhost:9000");
+    } catch (MalformedURLException e) {
+      throw new RuntimeException(e);
+    }
+  }
 
   private final SlashingProtector slashingProtector = mock(SlashingProtector.class);
   private final StubAsyncRunner asyncRunner = new StubAsyncRunner();
@@ -48,109 +64,99 @@ class ValidatorLoaderTest {
 
   @Test
   void initializeValidatorsWithExternalMessageSignerWhenConfigHasExternalSigningPublicKeys() {
-    final GlobalConfiguration globalConfiguration =
-        GlobalConfiguration.builder()
-            .setValidatorExternalSignerUrl("http://localhost:9000")
-            .setValidatorExternalSignerPublicKeys(Collections.singletonList(PUBLIC_KEY1))
+    final GlobalConfiguration globalConfig = GlobalConfiguration.builder().build();
+    final ValidatorConfig config =
+        ValidatorConfig.builder()
+            .validatorExternalSignerUrl(SIGNER_URL)
+            .validatorExternalSignerPublicKeys(Collections.singletonList(PUBLIC_KEY1))
             .build();
     final Map<BLSPublicKey, Validator> validators =
-        validatorLoader.initializeValidators(globalConfiguration);
+        validatorLoader.initializeValidators(config, globalConfig);
 
     assertThat(validators).hasSize(1);
-    final BLSPublicKey key = BLSPublicKey.fromSSZBytes(Bytes.fromHexString(PUBLIC_KEY1));
-    final Validator validator = validators.get(key);
+    final Validator validator = validators.get(PUBLIC_KEY1);
     assertThat(validator).isNotNull();
-    assertThat(validator.getPublicKey()).isEqualTo(key);
+    assertThat(validator.getPublicKey()).isEqualTo(PUBLIC_KEY1);
     assertThat(validator.getSigner().isLocal()).isFalse();
   }
 
   @Test
-  void initializeValidatorsWithLocalMessageSignerWhenConfigHasValidatorsKeyFile(
-      @TempDir Path tempDir) throws IOException {
-    final Path validatorKeyFile = tempDir.resolve("validatorKeyFile");
-    Files.writeString(validatorKeyFile, VALIDATOR_KEY_FILE);
+  void initializeValidatorsWithBothLocalAndExternalSigners(@TempDir Path tempDir) throws Exception {
+    writeKeystore(tempDir);
 
-    final GlobalConfiguration globalConfiguration =
-        GlobalConfiguration.builder()
-            .setValidatorKeyFile(validatorKeyFile.toAbsolutePath().toString())
+    final GlobalConfiguration globalConfig = GlobalConfiguration.builder().build();
+    final ValidatorConfig config =
+        ValidatorConfig.builder()
+            .validatorExternalSignerUrl(SIGNER_URL)
+            .validatorExternalSignerPublicKeys(Collections.singletonList(PUBLIC_KEY2))
+            .validatorKeys(
+                List.of(
+                    tempDir.toAbsolutePath().toString()
+                        + File.pathSeparator
+                        + tempDir.toAbsolutePath().toString()))
             .build();
     final Map<BLSPublicKey, Validator> validators =
-        validatorLoader.initializeValidators(globalConfiguration);
-
-    assertThat(validators).hasSize(1);
-    final BLSPublicKey key = BLSPublicKey.fromSSZBytes(Bytes.fromHexString(PUBLIC_KEY1));
-    final Validator validator = validators.get(key);
-    assertThat(validator).isNotNull();
-    assertThat(validator.getPublicKey()).isEqualTo(key);
-    assertThat(validator.getSigner().isLocal()).isTrue();
-  }
-
-  @Test
-  void initializeValidatorsWithBothLocalAndExternalSigners(@TempDir Path tempDir)
-      throws IOException {
-    final Path validatorKeyFile = tempDir.resolve("validatorKeyFile");
-    Files.writeString(validatorKeyFile, VALIDATOR_KEY_FILE);
-
-    final GlobalConfiguration globalConfiguration =
-        GlobalConfiguration.builder()
-            .setValidatorExternalSignerUrl("http://localhost:9000")
-            .setValidatorExternalSignerPublicKeys(Collections.singletonList(PUBLIC_KEY2))
-            .setValidatorKeyFile(validatorKeyFile.toAbsolutePath().toString())
-            .build();
-    final Map<BLSPublicKey, Validator> validators =
-        validatorLoader.initializeValidators(globalConfiguration);
+        validatorLoader.initializeValidators(config, globalConfig);
 
     assertThat(validators).hasSize(2);
 
-    final BLSPublicKey key1 = BLSPublicKey.fromSSZBytes(Bytes.fromHexString(PUBLIC_KEY1));
-    final Validator validator1 = validators.get(key1);
+    final Validator validator1 = validators.get(PUBLIC_KEY1);
     assertThat(validator1).isNotNull();
-    assertThat(validator1.getPublicKey()).isEqualTo(key1);
+    assertThat(validator1.getPublicKey()).isEqualTo(PUBLIC_KEY1);
     assertThat(validator1.getSigner().isLocal()).isTrue();
 
-    final BLSPublicKey key2 = BLSPublicKey.fromSSZBytes(Bytes.fromHexString(PUBLIC_KEY2));
-    final Validator validator2 = validators.get(key2);
+    final Validator validator2 = validators.get(PUBLIC_KEY2);
     assertThat(validator2).isNotNull();
-    assertThat(validator2.getPublicKey()).isEqualTo(key2);
+    assertThat(validator2.getPublicKey()).isEqualTo(PUBLIC_KEY2);
     assertThat(validator2.getSigner().isLocal()).isFalse();
   }
 
   @Test
   void initializeValidatorsWithDuplicateKeysInLocalAndExternalSignersTakesExternalAsPriority(
-      @TempDir Path tempDir) throws IOException {
-    final Path validatorKeyFile = tempDir.resolve("validatorKeyFile");
-    Files.writeString(validatorKeyFile, VALIDATOR_KEY_FILE);
+      @TempDir Path tempDir) throws Exception {
+    writeKeystore(tempDir);
 
-    final GlobalConfiguration globalConfiguration =
-        GlobalConfiguration.builder()
-            .setValidatorExternalSignerUrl("http://localhost:9000")
-            .setValidatorExternalSignerPublicKeys(Collections.singletonList(PUBLIC_KEY1))
-            .setValidatorKeyFile(validatorKeyFile.toAbsolutePath().toString())
+    final GlobalConfiguration globalConfig = GlobalConfiguration.builder().build();
+    final ValidatorConfig config =
+        ValidatorConfig.builder()
+            .validatorExternalSignerUrl(SIGNER_URL)
+            .validatorExternalSignerPublicKeys(Collections.singletonList(PUBLIC_KEY1))
+            .validatorKeys(
+                List.of(
+                    tempDir.toAbsolutePath().toString()
+                        + File.pathSeparator
+                        + tempDir.toAbsolutePath().toString()))
             .build();
     final Map<BLSPublicKey, Validator> validators =
-        validatorLoader.initializeValidators(globalConfiguration);
+        validatorLoader.initializeValidators(config, globalConfig);
 
     // Both local and external validators get loaded.
     assertThat(validators).hasSize(1);
 
     // Local validators are listed first
-    final BLSPublicKey key = BLSPublicKey.fromSSZBytes(Bytes.fromHexString(PUBLIC_KEY1));
-    final Validator validator = validators.get(key);
+    final Validator validator = validators.get(PUBLIC_KEY1);
     assertThat(validator).isNotNull();
-    assertThat(validator.getPublicKey()).isEqualTo(key);
+    assertThat(validator.getPublicKey()).isEqualTo(PUBLIC_KEY1);
     assertThat(validator.getSigner().isLocal()).isFalse();
+  }
+
+  private void writeKeystore(final Path tempDir) throws Exception {
+    final URL resource = Resources.getResource("pbkdf2TestVector.json");
+    Files.copy(Path.of(resource.toURI()), tempDir.resolve("key.json"));
+    Files.writeString(tempDir.resolve("key.txt"), "testpassword");
   }
 
   @Test
   void initializeInteropValidatorsWhenInteropIsEnabled() {
     final int ownedValidatorCount = 10;
-    final GlobalConfiguration globalConfiguration =
+    final GlobalConfiguration globalConfig =
         GlobalConfiguration.builder()
             .setInteropEnabled(true)
             .setInteropOwnedValidatorCount(ownedValidatorCount)
             .build();
+    final ValidatorConfig config = ValidatorConfig.builder().build();
     final Map<BLSPublicKey, Validator> validators =
-        validatorLoader.initializeValidators(globalConfiguration);
+        validatorLoader.initializeValidators(config, globalConfig);
 
     assertThat(validators).hasSize(ownedValidatorCount);
   }
@@ -158,13 +164,14 @@ class ValidatorLoaderTest {
   @Test
   void doNotInitializeInteropValidatorsWhenInteropIsDisabled() {
     final int ownedValidatorCount = 10;
-    final GlobalConfiguration globalConfiguration =
+    final GlobalConfiguration globalConfig =
         GlobalConfiguration.builder()
             .setInteropEnabled(false)
             .setInteropOwnedValidatorCount(ownedValidatorCount)
             .build();
+    final ValidatorConfig config = ValidatorConfig.builder().build();
     final Map<BLSPublicKey, Validator> validators =
-        validatorLoader.initializeValidators(globalConfiguration);
+        validatorLoader.initializeValidators(config, globalConfig);
 
     assertThat(validators).isEmpty();
   }
